--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "browserslist": 
-    [
-      "defaults"
-    ],
+  "browserslist": [
+    "defaults"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack-dev-server",
-    "build:prod": "webpack --mode production"
+    "build:prod": "webpack --config webpack.prod.config.js"
   },
   "keywords": [],
   "author": "",
@@ -24,10 +23,12 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
+    "optimize-css-assets-webpack-plugin": "^4.0.2",
     "postcss-loader": "^2.1.5",
     "sass-loader": "^7.0.3",
     "ts-loader": "^4.4.1",
     "typescript": "^2.9.2",
+    "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.7",
     "webpack-dev-server": "^3.1.4"
